# SafeQR

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
safeqr/: generator.py  main.py  scanner.py  security.py  ui.py  web.py
safeqr/templates/: index.html
safeqr/utils/: logger.py  validators.py
tests/: conftest.py  test_generator.py  test_security.py  test_validators.py  test_web.py
