[project]
name = "safeqr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.110.2",
    "uvicorn==0.29.0",
    "qrcode[pil]==7.4.2",
    "Pillow==10.3.0",
    "opencv-python==4.9.0.80",
    "pyzbar==0.1.9",
    "python-multipart==0.0.9",
    "Jinja2==3.1.3",
    "numpy==1.26.4",
]
